--- a/index.html
+++ b/index.html
@@ -4,46 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+    .round-image {
+        border-radius: 75%;
+    }
+    .center-image {
+        align-items: center;
+    }
+</style>
+
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    <h2>Список валют</h2>
-    <ul>
-        <li>€ (EURO) - Евро (Страны Еврозоны)</li>
-        <li>$ (USD) - Доллар (США)</li>
-        <li>£ (GBP) - Фунт стерлингов (Великобритания)</li>
-        <li>¥ (JPY) - Иена (Япония)</li>
-        <li>₾ (GEL) -Лари (Грузия)</li>
-    </ul> 
-
-    <h2>Курс на сегодня</h2>
-    <table border="2">
-        <tr>
-            <th>Флаг</th>
-            <th>Валюта</th>
-            <th>Курс</th>
-        </tr>
-        <tr>
-            <td><img 
-                src="./icons8-сша-48.png" alt=""><img src="./icons8-флаг-европы-48.png" alt=""></td>
-            <td>Euro</td>
-            <td>0,93</td>
-        </tr>
-        <tr>
-            <td><img src="./icons8-великобритания-48.png" alt=""><img src="./icons8-флаг-европы-48.png" alt=""></td>
-            <td>USD</td>
-            <td>1,17</td>
-        </tr>
-        <tr>
-            <td><img src="./icons8-япония-48.png" alt=""><img src="./icons8-флаг-европы-48.png" alt=""></td>
-            <td>EUR</td>
-            <td>0,0073</td>
-        </tr>
-        <tr>
-            <td><img src="./icons8-грузия-48.png" alt=""><img src="./icons8-флаг-европы-48.png" alt=""></td>
-            <td>EUR</td>
-            <td>0,32</td>
-        </tr>
-    </table>
+   <img src="./photo_2022-11-16_18-50-27.jpg" alt="" 
+   class="round-image">
+   <h2>Harris Willian</h2>
+   <p>Frontend Developer</p>
+   <button></button>
 </body>
 </html>
